--- a/style.css
+++ b/style.css
@@ -15,3 +15,14 @@
 .flipped-marker {
     transform: rotate(180deg); /* Rotiraj markere za 180 stepeni */
 }
+.area-table-container {
+    position: absolute;
+    bottom: 20px;
+    left: 20px;
+    background-color: white;
+    border: 3px solid #ccc;
+    padding: 10px;
+    z-index: 1000;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif, sans-serif;
+
+}
